Use Boolean.valueOf insted of new Boolean